--- a/task_manager/templates/layout.html
+++ b/task_manager/templates/layout.html
@@ -19,7 +19,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" href="#">Пользователи</a>
+              <a class="nav-link active" href="{% url 'users_list' %}">Пользователи</a>
               <a class="nav-link" href="#">Вход</a>
               <a class="nav-link" href="#">Регистрация</a>
             </div>
