--- a/task_manager/templates/layout.html
+++ b/task_manager/templates/layout.html
@@ -13,20 +13,40 @@
     </head>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Менеджер задач</a>
+          <a class="navbar-brand" href="{% url 'index' %}">Менеджер задач</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" href="{% url 'users_list' %}">Пользователи</a>
-              <a class="nav-link" href="#">Вход</a>
-              <a class="nav-link" href="#">Регистрация</a>
+            {% if user.is_authenticated %}
+              <a class="nav-link" href="#">Статусы</a>
+              <a class="nav-link" href="#">Метки</a>
+              <a class="nav-link" href="#">Задачи</a>
+              <form action="{% url 'logout' %}" method="post">
+                {% csrf_token %}
+                <button type="submit" class="nav-link btn btn-link">Выход</button>
+              </form>
+            {% else %}
+            <a class="nav-link" href="{% url 'login' %}">Вход</a>
+            <a class="nav-link" href="{% url 'create_user' %}">Регистрация</a>
+            {% endif %}
             </div>
           </div>
         </div>
       </nav>
-    {% block sidebar %}{% endblock sidebar %}
+    {% block sidebar %}
+      {% if messages %}
+          <div class="messages">
+              {% for message in messages %}
+                  <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">
+                      {{ message }}
+                  </div>
+              {% endfor %}
+          </div>
+      {% endif %}
+    {% endblock sidebar %}
     <main class="flex-grow-1">
         <div id="content" class="container-lg mt-3">
             {% block content %}{% endblock %}
