--- a/task_manager/users/templates/users/update_user.html
+++ b/task_manager/users/templates/users/update_user.html
@@ -1,10 +1,10 @@
 {% extends 'layout.html'%}
 
 {% block content %}
-<h2>Регистрация</h2>
+<h2>Редактирование пользователя</h2>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Создать аккаунт</button>
+    <button type="submit">Сохранить</button>
 </form>
 {% endblock %}
