--- a/task_manager/templates/layout.html
+++ b/task_manager/templates/layout.html
@@ -38,13 +38,11 @@
       </nav>
     {% block sidebar %}
       {% if messages %}
-          <div class="messages">
-              {% for message in messages %}
-                  <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">
-                      {{ message }}
-                  </div>
-              {% endfor %}
-          </div>
+      <div class="alert alert-warning">
+          {% for message in messages %}
+              <p>{{ message }}</p>
+          {% endfor %}
+      </div>
       {% endif %}
     {% endblock sidebar %}
     <main class="flex-grow-1">
