--- a/task_manager/templates/layout.html
+++ b/task_manager/templates/layout.html
@@ -23,7 +23,7 @@
             {% if user.is_authenticated %}
               <a class="nav-link" href="{% url 'statuses:status_list' %}">Статусы</a>
               <a class="nav-link" href="#">Метки</a>
-              <a class="nav-link" href="#">Задачи</a>
+              <a class="nav-link" href="{% url 'tasks:task_list' %}">Задачи</a>
               <form action="{% url 'logout' %}" method="post">
                 {% csrf_token %}
                 <button type="submit" class="nav-link btn btn-link">Выход</button>
