--- a/task_manager/templates/layout.html
+++ b/task_manager/templates/layout.html
@@ -22,7 +22,7 @@
               <a class="nav-link active" href="{% url 'users_list' %}">Пользователи</a>
             {% if user.is_authenticated %}
               <a class="nav-link" href="{% url 'statuses:status_list' %}">Статусы</a>
-              <a class="nav-link" href="#">Метки</a>
+              <a class="nav-link" href="{% url 'labels:label_list' %}">Метки</a>
               <a class="nav-link" href="{% url 'tasks:task_list' %}">Задачи</a>
               <form action="{% url 'logout' %}" method="post">
                 {% csrf_token %}
