--- a/task_manager/labels/templates/label_list.html
+++ b/task_manager/labels/templates/label_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container mt-5"></div>
-    <h1 class="mb-4">Статусы</h1>
+    <h1 class="mb-4">Метки</h1>
     <a href="{% url 'labels:label_create' %}">Создать метку</a>
     <table data-test="urls" class="table table-bordered table-hover text-center">
         <thead class="table-light">
