--- a/task_manager/labels/templates/label_delete.html
+++ b/task_manager/labels/templates/label_delete.html
@@ -5,6 +5,6 @@
 <p>Вы уверены, что хотите удалить метку {{ object.name }}?</p>
 <form method="post">
     {% csrf_token %}
-    <button type="submit">Удалить</button>
+    <button type="submit" class="btn btn-primary btn-lg">Удалить</button>
 </form>
 {% endblock %}
