--- a/task_manager/labels/templates/label_update.html
+++ b/task_manager/labels/templates/label_update.html
@@ -10,6 +10,6 @@
         {{ form.errors }}
     </div>
     {% endif %}
-    <button type="submit">Сохранить</button>
+    <button type="submit" class="btn btn-primary btn-lg">Сохранить</button>
 </form>
 {% endblock%}
