--- a/task_manager/statuses/templates/status_create.html
+++ b/task_manager/statuses/templates/status_create.html
@@ -10,6 +10,6 @@
         {{ form.errors }}
     </div>
     {% endif %}
-    <button type="submit">Создать</button>
+    <button type="submit" class="btn btn-primary btn-lg">Создать</button>
 </form>
 {% endblock%}
