--- a/task_manager/labels/templates/label_delete.html
+++ b/task_manager/labels/templates/label_delete.html
@@ -6,5 +6,6 @@
 <form method="post">
     {% csrf_token %}
     <button type="submit" class="btn btn-primary btn-lg">Удалить</button>
+    <a href="{% url 'labels:label_list' %}" class="btn btn-primary btn-lg">Назад</a>
 </form>
 {% endblock %}
