--- a/task_manager/statuses/templates/status_create.html
+++ b/task_manager/statuses/templates/status_create.html
@@ -1,15 +1,14 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-<h1>Создать статус</h1>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    {% if form.errors %}
-    <div class="alert alert-danger">
-        {{ form.errors }}
+<div class="container mt-4">
+    <h1 class="mb-4">Создать статус</h1>
+    <div class="card shadow-sm p-4">
+        <form method="post" class="mb-3">
+            {% csrf_token %}
+            <label for="" class="form-label">{{ form.as_p }}</label>
+            <button type="submit" class="btn btn-primary btn-lg w-100">Создать</button>
+        </form>
     </div>
-    {% endif %}
-    <button type="submit" class="btn btn-primary btn-lg">Создать</button>
-</form>
-{% endblock%}
+</div>
+{% endblock %}
