--- a/task_manager/statuses/templates/status_list.html
+++ b/task_manager/statuses/templates/status_list.html
@@ -4,7 +4,7 @@
 <div class="container mt-5"></div>
     <h1 class="mb-4">Статусы</h1>
     <div>
-        <a href="{% url 'statuses:status_create' %}" class="btn btn-primary btn-lg">Создать статус</a>
+        <a href="{% url 'statuses:status_create' %}" class="btn btn-primary btn-lg mb-4">Создать статус</a>
     </div>
     <div>
         <table data-test="urls" class="table table-bordered table-hover text-center">
@@ -13,7 +13,7 @@
                     <th scope="col">ID</th>
                     <th scope="col">Имя</th>
                     <th scope="col">Дата создания</th>
-                    <th scope="col">Изменить/удалить</th>
+                    <th scope="col"></th>
                 </tr>
             </thead>
             <tbody>
@@ -22,9 +22,13 @@
                     <td>{{ status.id }}</td>
                     <td>{{ status.name }}</td>
                     <td>{{ status.created_at}}</td>
-                    <td>
-                        <a href="{% url 'statuses:status_update' status.id %}">Изменить</a>
-                        <a href="{% url 'statuses:status_delete' status.id %}">Удалить</a>
+                    <td class="text-center">
+                        <a href="{% url 'statuses:status_update' status.id %}" class="btn btn-sm btn-warning me-2">
+                            <i class="bi bi-pencil"></i> Изменить
+                        </a>
+                        <a href="{% url 'statuses:status_delete' status.id %}" class="btn btn-sm btn-danger">
+                            <i class="bi bi-trash"></i> Удалить
+                        </a>
                     </td>
                 </tr>
                 {% endfor %}
