--- a/task_manager/tasks/templates/task_create.html
+++ b/task_manager/tasks/templates/task_create.html
@@ -1,15 +1,26 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-<h1>Создать задачу</h1>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    {% if form.errors %}
-    <div class="alert alert-danger">
-        {{ form.errors }}
+<div class="container mt-4">
+    <h1 class="mb-4">Создать задачу</h1>
+    <div class="card shadow-sm p-4">
+        <form method="post">
+            {% csrf_token %}
+            
+            {% for field in form %}
+                <div class="mb-3">
+                    <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
+                    {{ field }}
+                    {% if field.errors %}
+                        <div class="alert alert-danger mt-2 p-2">
+                            {{ field.errors.0 }}
+                        </div>
+                    {% endif %}
+                </div>
+            {% endfor %}
+            
+            <button type="submit" class="btn btn-primary btn-lg w-100">Создать</button>
+        </form>
     </div>
-    {% endif %}
-    <button type="submit">Создать</button>
-</form>
-{% endblock%}
+</div>
+{% endblock %}
