--- a/task_manager/tasks/templates/task_delete.html
+++ b/task_manager/tasks/templates/task_delete.html
@@ -5,6 +5,7 @@
 <p>Вы уверены, что хотите удалить задачу {{ object.name }}?</p>
 <form method="post">
     {% csrf_token %}
-    <button type="submit">Удалить</button>
+    <button type="submit" class="btn btn-primary btn-lg">Удалить</button>
+    <a href="{% url 'tasks:task_list' %}" class="btn btn-primary btn-lg">Назад</a>
 </form>
 {% endblock %}
