--- a/task_manager/tasks/templates/task_list.html
+++ b/task_manager/tasks/templates/task_list.html
@@ -1,23 +1,29 @@
 {% extends 'layout.html' %}
-
+{% load widget_tweaks %}
+class="card shadow-sm p-4"
 {% block content %}
 <div class="container mt-5"></div>
     <h1 class="mb-4">Задачи</h1>
-    <a href="{% url 'tasks:task_create' %}" class="btn btn-primary btn-lg">Создать задачу</a>
-    <table data-test="urls" class="table table-bordered table-hover text-center">
+    <a href="{% url 'tasks:task_create' %}" class="btn btn-primary btn-lg mb-4">Создать задачу</a>
+
+    <div class="card shadow-sm p-4 mb-4">
         <!-- форма для фильтрации по статусу исполнителю метке или только свои задачи -->
-        <form method="get" class="filter-form">
-            <div class="mb-3">
+        <form method="get" class="filter-form mb-4">
+            <div class="col">
                 {% for field in filter.form %}
-                <div class="mb-3">
-                    <label for="{{ field.id_for_label }}" class="form-label" >{{ field.label }}:</label>
-                    {{ field }}
-                </div>
+                    <div class="col-md-4 mb-3">
+                        <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}:</label>
+                        {{ field|add_class:"form-control" }}
+                    </div>
                 {% endfor %}
             </div>
-            <button type="submit" class="btn btn-primary">Фильтровать</button>
+            <div>
+                <button type="submit" class="btn btn-primary">Фильтровать</button>
+            </div>
         </form>
+    </div>
 
+    <table data-test="urls" class="table table-bordered table-hover text-center">
         <thead class="table-light">
             <tr>
                 <th scope="col">ID</th>
@@ -38,9 +44,13 @@
                 <td>{{ task.author }}</td>
                 <td>{{ task.worker }}</td>
                 <td>{{ task.created_at}}</td>
-                <td>
-                    <a href="{% url 'tasks:task_update' task.id %}">Изменить</a>
-                    <a href="{% url 'tasks:task_delete' task.id %}">Удалить</a>
+                <td class="text-center">
+                    <a href="{% url 'tasks:task_update' task.id %}" class="btn btn-sm btn-warning me-2">
+                        <i class="bi bi-pencil"></i> Изменить
+                    </a>
+                    <a href="{% url 'tasks:task_delete' task.id %}" class="btn btn-sm btn-danger">
+                        <i class="bi bi-trash"></i> Удалить
+                    </a>
                 </td>
             </tr>
             {% endfor %}
