--- a/task_manager/tasks/templates/task_create.html
+++ b/task_manager/tasks/templates/task_create.html
@@ -1,26 +1,28 @@
 {% extends 'layout.html' %}
+{% load widget_tweaks %}
 
 {% block content %}
 <div class="container mt-4">
     <h1 class="mb-4">Создать задачу</h1>
     <div class="card shadow-sm p-4">
-        <form method="post">
+        <form method="post" class="mb-3">
             {% csrf_token %}
-            
-            {% for field in form %}
-                <div class="mb-3">
-                    <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
-                    {{ field }}
-                    {% if field.errors %}
-                        <div class="alert alert-danger mt-2 p-2">
-                            {{ field.errors.0 }}
-                        </div>
-                    {% endif %}
-                </div>
-            {% endfor %}
-            
+            <div>
+                {% for field in form %}
+                    <div class="col mb-3">
+                        <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
+                        {{ field|add_class:"form-control" }}
+                        {% if field.errors %}
+                            <div class="alert alert-danger mt-2 p-2">
+                                {{ field.errors.0 }}
+                            </div>
+                        {% endif %}
+                    </div>
+                {% endfor %}
+            </div>
             <button type="submit" class="btn btn-primary btn-lg w-100">Создать</button>
         </form>
     </div>
 </div>
 {% endblock %}
+
