--- a/task_manager/users/templates/users/delete_user.html
+++ b/task_manager/users/templates/users/delete_user.html
@@ -5,6 +5,7 @@
 <p>Вы уверены, что хотите удалить пользователя {{ object.username }}?</p>
 <form method="post">
     {% csrf_token %}
-    <button type="submit">Удалить</button>
+    <button type="submit" class="btn btn-primary btn-lg">Удалить</button>
 </form>
 {% endblock %}
+
