--- a/task_manager/users/templates/users/update_user.html
+++ b/task_manager/users/templates/users/update_user.html
@@ -1,10 +1,22 @@
 {% extends 'layout.html'%}
+{% load widget_tweaks %}
 
 {% block content %}
-<h2>Редактирование пользователя</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Сохранить</button>
-</form>
+<div class="card shadow-sm p-4 mb-4">
+    <h1 class="mb-4">Редактирование пользователя</h1>
+    <form method="post" class="filter-form mb-4">
+        <form method="post" class="mb-3">
+            {% csrf_token %}
+            <div class="col">
+                {% for field in form %}
+                <div class="col-md-4 mb-3">
+                    <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}:</label>
+                    {{ field|add_class:"form-control" }}
+                </div>
+                {% endfor %}
+            </div>
+            <button type="submit" class="btn btn-primary btn-lg w-100">Сохранить</button>
+        </form>
+    </div>
+</div>
 {% endblock %}
