--- a/task_manager/users/templates/users/create_user.html
+++ b/task_manager/users/templates/users/create_user.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="card shadow-sm p-4 mb-4">
     <h1 class="mb-4">Регистрация</h1>
-    <form method="get" class="filter-form mb-4">
+    <form method="post" class="filter-form mb-4">
         <form method="post" class="mb-3">
             {% csrf_token %}
             <div class="col">
