--- a/task_manager/users/templates/users/login.html
+++ b/task_manager/users/templates/users/login.html
@@ -1,14 +1,19 @@
-{% extends "layout.html" %}
-{% load widget_tweaks %}
-
-{% block content %}
+{% extends "layout.html" %} {% load widget_tweaks %} {% block content %}
 <div class="container mt-4">
     <h1 class="mb-4">Вход</h1>
     <div class="card shadow-sm p-4">
-        <form method="post" class="mb-3">
-            {% csrf_token %}
-            <label for="" class="form-label">{{ form.as_p }}</label>
-            <button type="submit" class="btn btn-primary btn-lg w-100">Войти</button>
+        <form method="post">
+            {% csrf_token %} {% for field in form %}
+            <div class="mb-3 col-md-4">
+                <label for="{{ field.id_for_label }}" class="form-label">
+                    {{ field.label }}
+                </label>
+                {{ field|add_class:"form-control" }}
+            </div>
+            {% endfor %}
+            <button type="submit" class="btn btn-primary btn-lg w-100">
+                Войти
+            </button>
         </form>
     </div>
 </div>
