--- a/task_manager/tasks/templates/task_list.html
+++ b/task_manager/tasks/templates/task_list.html
@@ -18,7 +18,7 @@ class="card shadow-sm p-4"
                 {% endfor %}
             </div>
             <div>
-                <button type="submit" class="btn btn-primary">Фильтровать</button>
+                <button type="submit" class="btn btn-primary">Показать</button>
             </div>
         </form>
     </div>
