--- a/task_manager/labels/templates/label_delete.html
+++ b/task_manager/labels/templates/label_delete.html
@@ -1,11 +1,8 @@
-{% extends 'layout.html'%}
-
-{% block content %}
+{% extends 'layout.html'%} {% block content %}
 <h2>Удаление метки</h2>
 <p>Вы уверены, что хотите удалить метку {{ object.name }}?</p>
 <form method="post">
     {% csrf_token %}
-    <button type="submit" class="btn btn-primary btn-lg">Удалить</button>
-    <a href="{% url 'labels:label_list' %}" class="btn btn-primary btn-lg">Назад</a>
+    <button type="submit" class="btn btn-primary btn-lg">Да, удалить</button>
 </form>
 {% endblock %}
