--- a/task_manager/statuses/templates/status_delete.html
+++ b/task_manager/statuses/templates/status_delete.html
@@ -1,10 +1,8 @@
-{% extends 'layout.html'%}
-
-{% block content %}
+{% extends 'layout.html'%} {% block content %}
 <h2>Удаление статуса</h2>
 <p>Вы уверены, что хотите удалить статус {{ object.name }}?</p>
 <form method="post">
     {% csrf_token %}
-    <button type="submit" class="btn btn-primary btn-lg">Удалить</button>
+    <button type="submit" class="btn btn-primary btn-lg">Да, удалить</button>
 </form>
 {% endblock %}
