--- a/task_manager/users/templates/users/create_user.html
+++ b/task_manager/users/templates/users/create_user.html
@@ -15,7 +15,7 @@
                 </div>
                 {% endfor %}
             </div>
-            <button type="submit" class="btn btn-primary btn-lg w-100">Создать аккаунт</button>
+            <button type="submit" class="btn btn-primary btn-lg w-100">Зарегистрировать</button>
         </form>
     </div>
 </div>
