--- a/task_manager/templates/layout.html
+++ b/task_manager/templates/layout.html
@@ -1,54 +1,91 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mainpage</title>
-</head>
-<body>
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Mainpage</title>
     </head>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="{% url 'index' %}">Менеджер задач</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active" href="{% url 'users_list' %}">Пользователи</a>
-            {% if user.is_authenticated %}
-              <a class="nav-link" href="{% url 'statuses:status_list' %}">Статусы</a>
-              <a class="nav-link" href="{% url 'labels:label_list' %}">Метки</a>
-              <a class="nav-link" href="{% url 'tasks:task_list' %}">Задачи</a>
-              <form action="{% url 'logout' %}" method="post">
-                {% csrf_token %}
-                <button type="submit" class="nav-link btn btn-link">Выход</button>
-              </form>
-            {% else %}
-            <a class="nav-link" href="{% url 'login' %}">Вход</a>
-            <a class="nav-link" href="{% url 'create_user' %}">Регистрация</a>
-            {% endif %}
+    <body>
+        <head>
+            <meta charset="utf-8" />
+            <meta
+                name="viewport"
+                content="width=device-width, initial-scale=1"
+            />
+            <link
+                href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+                rel="stylesheet"
+                integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+                crossorigin="anonymous"
+            />
+        </head>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="{% url 'index' %}"
+                    >Менеджер задач</a
+                >
+                <button
+                    class="navbar-toggler"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation"
+                >
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link active" href="{% url 'users_list' %}"
+                            >Пользователи</a
+                        >
+                        {% if user.is_authenticated %}
+                        <a
+                            class="nav-link"
+                            href="{% url 'statuses:status_list' %}"
+                            >Статусы</a
+                        >
+                        <a class="nav-link" href="{% url 'labels:label_list' %}"
+                            >Метки</a
+                        >
+                        <a class="nav-link" href="{% url 'tasks:task_list' %}"
+                            >Задачи</a
+                        >
+                        <form action="{% url 'logout' %}" method="post">
+                            {% csrf_token %}
+                            <button type="submit" class="nav-link btn btn-link">
+                                Выход
+                            </button>
+                        </form>
+                        {% else %}
+                        <a class="nav-link" href="{% url 'login' %}">Вход</a>
+                        <a class="nav-link" href="{% url 'create_user' %}"
+                            >Регистрация</a
+                        >
+                        {% endif %}
+                    </div>
+                </div>
             </div>
-          </div>
+        </nav>
+
+        {% block sidebar %} {% if messages %}
+        <div class="container mt-4">
+            {% for message in messages %}
+            <div
+                class="alert alert-{{ message.tags }} alert-dismissible fade show"
+                role="alert"
+            >
+                {{ message }}
+            </div>
+            {% endfor %}
         </div>
-      </nav>
-    {% block sidebar %}
-      {% if messages %}
-      <div class="alert alert-warning">
-          {% for message in messages %}
-              <p>{{ message }}</p>
-          {% endfor %}
-      </div>
-      {% endif %}
-    {% endblock sidebar %}
-    <main class="flex-grow-1">
-        <div id="content" class="container-lg mt-3">
-            {% block content %}{% endblock %}
-        </div>
-    </main>
-</body>
+        {% endif %} {% endblock sidebar %}
+
+        <main class="flex-grow-1">
+            <div id="content" class="container-lg mt-3">
+                {% block content %}{% endblock %}
+            </div>
+        </main>
+    </body>
 </html>
