--- a/task_manager/labels/templates/label_create.html
+++ b/task_manager/labels/templates/label_create.html
@@ -1,13 +1,17 @@
-{% extends 'layout.html' %}
-
-{% block content %}
+{% extends 'layout.html' %} {% load widget_tweaks %} {% block content %}
 <div class="container mt-4">
     <h1 class="mb-4">Создать метку</h1>
     <div class="card shadow-sm p-4">
         <form method="post" class="mb-3">
             {% csrf_token %}
-            <label for="" class="form-label">{{ form.as_p }}</label>
-            <button type="submit" class="btn btn-primary btn-lg w-100">Создать</button>
+            <div class="form-group mb-3">
+                <label for="{{ form.name.id_for_label }}">Имя</label>
+
+                {{ form.name|add_class:'form-control-small' }}
+            </div>
+            <button type="submit" class="btn btn-primary btn-lg w-100">
+                Создать
+            </button>
         </form>
     </div>
 </div>
