--- a/task_manager/tasks/templates/task_details.html
+++ b/task_manager/tasks/templates/task_details.html
@@ -1,4 +1,6 @@
 {% extends 'layout.html' %} {% block content %}
+<h1>Просмотр задачи</h1>
+
 <h1 class="my-4">{{ title }}</h1>
 <div class="card">
     <div class="card-header bg-secondary text-white">
@@ -22,8 +24,9 @@
             </div>
             <div class="row p-1">
                 <div class="col">
+                    <p>Метки:</p>
                     <ul>
-                        {% for label in task.labels.all %}
+                        {% for label in task.label.all %}
                         <li>{{ label.name }}</li>
                         {% endfor %}
                     </ul>
