--- a/task_manager/tasks/templates/task_list.html
+++ b/task_manager/tasks/templates/task_list.html
@@ -12,7 +12,7 @@ class="card shadow-sm p-4"
             <div class="col">
                 {% for field in filter.form %}
                     <div class="col-md-4 mb-3">
-                        <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}:</label>
+                        <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }} </label>
                         {{ field|add_class:"form-control" }}
                     </div>
                 {% endfor %}
