--- a/task_manager/tasks/templates/task_update.html
+++ b/task_manager/tasks/templates/task_update.html
@@ -1,21 +1,16 @@
-{% extends 'layout.html' %}
-{% load widget_tweaks %}
-
-{% block content %}
+{% extends 'layout.html' %} {% load widget_tweaks %} {% block content %}
 <div class="card shadow-sm p-4 mb-4">
     <h1 class="mb-4">Изменить задачу</h1>
     <form method="post" class="filter-form mb-4">
         {% csrf_token %}
         <div class="mb-3">
             {% if form.errors %}
-            <div class="alert alert-danger">
-                {{ form.errors }}
-            </div>
-            {% endif %}
-
-            {% for field in form %}
+            <div class="alert alert-danger">{{ form.errors }}</div>
+            {% endif %} {% for field in form %}
             <div class="col-md mb-3">
-                <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}:</label>
+                <label for="{{ field.id_for_label }}" class="form-label"
+                    >{{ field.label }}
+                </label>
                 {{ field|add_class:"form-control" }}
             </div>
             {% endfor %}
