--- a/task_manager/users/templates/users/update_user.html
+++ b/task_manager/users/templates/users/update_user.html
@@ -15,7 +15,7 @@
                 </div>
                 {% endfor %}
             </div>
-            <button type="submit" class="btn btn-primary btn-lg w-100">Сохранить</button>
+            <button type="submit" class="btn btn-primary btn-lg w-100">Изменить</button>
         </form>
     </div>
 </div>
