--- a/task_manager/tasks/templates/task_delete.html
+++ b/task_manager/tasks/templates/task_delete.html
@@ -1,11 +1,11 @@
-{% extends 'layout.html'%}
-
-{% block content %}
+{% extends 'layout.html'%} {% block content %}
 <h2>Удаление задачи</h2>
 <p>Вы уверены, что хотите удалить задачу {{ object.name }}?</p>
 <form method="post">
     {% csrf_token %}
-    <button type="submit" class="btn btn-primary btn-lg">Удалить</button>
-    <a href="{% url 'tasks:task_list' %}" class="btn btn-primary btn-lg">Назад</a>
+    <button type="submit" class="btn btn-primary btn-lg">Да, удалить</button>
+    <a href="{% url 'tasks:task_list' %}" class="btn btn-primary btn-lg"
+        >Назад</a
+    >
 </form>
 {% endblock %}
