--- a/task_manager/statuses/templates/status_update.html
+++ b/task_manager/statuses/templates/status_update.html
@@ -1,9 +1,11 @@
-{% extends 'layout.html' %} {% block content %}
+{% extends 'layout.html' %} {% load widget_tweaks %} {% block content %}
 <h1>Изменить статус</h1>
 <form method="post">
-    {% csrf_token %} {{ form.as_p }} {% if form.errors %}
-    <div class="alert alert-danger">{{ form.errors }}</div>
-    {% endif %}
+    <div class="form-group mb-3">
+        <label for="{{ form.name.id_for_label }}">Имя</label>
+
+        {{ form.name|add_class:'form-control-small' }}
+    </div>
     <button type="submit" class="btn btn-primary btn-lg">Измениить</button>
 </form>
 {% endblock%}
