Fix errors in update button labels and statuses

--- a/task_manager/labels/templates/label_update.html
+++ b/task_manager/labels/templates/label_update.html
@@ -8,6 +8,6 @@
         {{ form.name|add_class:'form-control-small' }}
     </div>
     {% endif %}
-    <button type="submit" class="btn btn-primary btn-lg">Сохранить</button>
+    <button type="submit" class="btn btn-primary btn-lg">Изменить</button>
 </form>
 {% endblock%}
