--- a/task_manager/statuses/templates/status_update.html
+++ b/task_manager/statuses/templates/status_update.html
@@ -6,6 +6,6 @@
 
         {{ form.name|add_class:'form-control-small' }}
     </div>
-    <button type="submit" class="btn btn-primary btn-lg">Измениить</button>
+    <button type="submit" class="btn btn-primary btn-lg">Изменить</button>
 </form>
 {% endblock%}
