--- a/task_manager/statuses/templates/status_update.html
+++ b/task_manager/statuses/templates/status_update.html
@@ -1,6 +1,7 @@
 {% extends 'layout.html' %} {% load widget_tweaks %} {% block content %}
 <h1>Изменить статус</h1>
 <form method="post">
+    {% csrf_token %}
     <div class="form-group mb-3">
         <label for="{{ form.name.id_for_label }}">Имя</label>
 
