--- a/task_manager/tasks/templates/task_details.html
+++ b/task_manager/tasks/templates/task_details.html
@@ -11,14 +11,10 @@
         <hr />
         <div class="container">
             <div class="row p-1">
-                <div class="col">
-                    {{ task.author.first_name }} {{ task.author.last_name }}
-                </div>
+                <div class="col">{{ task.author.get_full_name }}</div>
             </div>
             <div class="row p-1">
-                <div class="col">
-                    {{ task.worker.first_name }} {{ task.worker.last_name }}
-                </div>
+                <div class="col">{{ task.worker.get_full_name }}</div>
             </div>
             <div class="row p-1">
                 <div class="col">{{ task.status }}</div>
