--- a/task_manager/tasks/templates/task_details.html
+++ b/task_manager/tasks/templates/task_details.html
@@ -14,7 +14,7 @@
                 <div class="col">{{ task.author.get_full_name }}</div>
             </div>
             <div class="row p-1">
-                <div class="col">{{ task.worker.get_full_name }}</div>
+                <div class="col">{{ task.executor.get_full_name }}</div>
             </div>
             <div class="row p-1">
                 <div class="col">{{ task.status }}</div>
