--- a/task_manager/tasks/templates/task_list.html
+++ b/task_manager/tasks/templates/task_list.html
@@ -42,7 +42,7 @@ class="card shadow-sm p-4"
                 <td><a href="{% url 'tasks:task_details' task.id %}">{{ task.name }}</td>
                 <td>{{ task.status }}</td>
                 <td>{{ task.author.get_full_name }}</td>
-                <td>{{ task.worker.get_full_name }}</td>
+                <td>{{ task.executor.get_full_name }}</td>
                 <td>{{ task.created_at}}</td>
                 <td class="text-center">
                     <a href="{% url 'tasks:task_update' task.id %}" class="btn btn-sm btn-warning me-2">
