--- a/task_manager/tasks/templates/task_update.html
+++ b/task_manager/tasks/templates/task_update.html
@@ -15,7 +15,7 @@
             </div>
             {% endfor %}
         </div>
-        <button type="submit" class="btn btn-primary btn-lg">Сохранить</button>
+        <button type="submit" class="btn btn-primary btn-lg">Изменить</button>
     </form>
 </div>
 {% endblock%}
